# NEMO-DINO

./: .gitignore  .gitmodules  README.md
DINO.GZ21/CONFIG/: arch-X64_DINO_GZ21.fcm  arch-X64_DINO_GZ21_GCC.fcm  cpp_DINO_GZ21.fcm
DINO.GZ21/CONFIG/my_src/: inffld.F90  infmod.F90  stpmlf.F90  usrdef_nam.F90
DINO.GZ21/INFERENCES/: main.py  ml_models.py  study_activation.ipynb  test_model.jil
DINO.GZ21/INFERENCES/gz21_ocean_momentum/: .pyproject.toml.swp  pyproject.toml
DINO.GZ21/INFERENCES/gz21_ocean_momentum/src/: gz21_cnn.py  transforms.py
DINO.GZ21/INFERENCES/gz21_ocean_momentum/src/gz21_ocean_momentum__Morays.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DINO.GZ21/INFERENCES/julia/: compare_models.jl  fcnn.jl  pytorch_to_jdl.jl  test_model.jl
DINO.GZ21/INFERENCES/models/: ml_models.py  model_gz21_eophis.py
DINO.GZ21/INFERENCES/utils/: fcnn.jl  h5_to_jdl.jl  weights_to_h5.py
DINO.GZ21/POST-PROCESS/: plots_diff.py  plots_res.py  requirements.txt
DINO.GZ21/RUN/: job.ksh  job_gpu.ksh
DINO.GZ21/RUN/NAMELISTS/: namelist_cfg  namelist_ref
DINO.GZ21/RUN/XML/: field_def_nemo-oce.xml  file_def_nemo-oce.xml  iodef.xml
DINO/CONFIG/my_src/: cpl_oasis3.F90  inffld.F90  infmod.F90  nemogcm.F90  sbc_oce.F90  sbccpl.F90  sbcmod.F90  step_oce.F90
DINO/INFERENCES/: main.py  models.py
DINO/POST-PROCESS/: postprocess_script.py
DINO/RUN/: job.ksh
DINO/RUN/NAMELISTS/: namelist_cfg
EXP.VAR0/CONFIG/: CPP.keys
EXP.VAR1/CONFIG/: arch-TEMPLATE.fcm
EXP.VAR1/INFERENCES/: main.py  models.py
EXP.VAR1/POST-PROCESS/: plot_script.py
(+12 files in other folders)
